--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">stage de profesionalisation </div>
-            <p>Ce stage comprend 3 phase en géodèsie, topographie
+            <p>Ce stage comprend 3 phases en géodèsie, topographie
               et photogrammétrie
                .</p>
           </div>
@@ -248,7 +248,7 @@
       <div class="row">
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
-            <p>2009 - 2013</p>
+            <p>2018 - 2020</p>
             <div class="h5">Diplome Technicien Spécialisé</div>
           </div>
         </div>
