--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
       <div class="card-body">
         <div class="row">
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">topographie</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">autocad</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
               </div>
             </div>
           </div>
           <div class="col-md-6">
-            <div class="progress-container progress-primary"><span class="progress-badge">technique cadastral</span>
+            <div class="progress-container progress-primary"><span class="progress-badge">QGiS</span>
               <div class="progress">
                 <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
               </div>
@@ -227,12 +227,12 @@
         <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body cc-education-header">
             <p>2021 - present</p>
-            <div class="h5">Cycle d'imgenieure</div>
+            <div class="h5">Cycle d'ingénieur</div>
           </div>
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5"> Science géomatique et INgénieurie Topographique</div>
+            <div class="h5"> Science géomatique et Ingénieure Topographique</div>
             <p class="category">Institut Agonomique et Véterinaire Hassan II</p>
             <p>maîtrise et connaissance des travaux cadastraux</p>
             <p>connaissance des processus
