--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               dans mon futur métier IGT.
               Comme tout junior, je ne serais nullement contre tout
               métier va me permettre à développer mes compétences
-              et mon savoir-faire professionne.</p>
+              et mon savoir-faire professionnel.</p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
