--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">stage de professionalisation </div>
+            <div class="h5">stage de professionnalisation </div>
             <p>Ce stage comprend 3 phases en géodèsie, topographie
               et photogrammétrie
                .</p>
