--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">stage d'entreprise</div>
-            <p>stage d'observation des different travaux sur l'entreprise</p>
+            <p>stage d'observation et intervention dans des different travaux sur l'entreprise</p>
           </div>
         </div>
       </div>
